# weather_Api

./: Cargo.toml  Rocket.toml  api.json
src/: lib.rs  main.rs
